# multi-type-feedback

./: .gitignore  README.md  generate_feedback_slurm.sh  pyproject.toml  setup  setup.py  setup.sh
rlhf/: .gitignore  Analyze_Generated_Feedback.ipynb  Analyze_Reward_Model_Predictions.ipynb  Generate_Appendix_A_Plots.ipynb  Generate_RL_result_curves.ipynb  Generate_reward_model_graphs.ipynb  README.md  add_cluster_descriptions.py  generate_feedback.sh  generate_feedback_debugging.sh  generate_rew_correlation_plot.py  pyproject.toml  pyproject_backup.toml  train_agents.sh  train_reward_models.sh  train_reward_models_with_noise.sh
rlhf/masksembles/test/: test_keras.py  test_torch.py
rlhf/notebooks/: Analyze_Reward_Model_Predictions.ipynb  Generate_Appendix_A_Plots-Copy1.ipynb  Generate_Correlation_Plots.ipynb  Generate_RL_result_curves.ipynb  Generate_RL_result_curves_noise.ipynb  Generate_reward_model_graphs.ipynb  Generate_reward_model_noise.ipynb  Generate_rliable_reward_plots.ipynb  Rew_GT_Corr_Plots.ipynb
rlhf/rl_logs/#3_sac_HalfCheetah-v3_evaluative_428_0/: events.out.tfevents.1716898144.JP.3731029.0  events.out.tfevents.1716898162.JP.3731029.1  events.out.tfevents.1716898181.JP.3731029.2  events.out.tfevents.1716898199.JP.3731029.3  events.out.tfevents.1716898218.JP.3731029.4  events.out.tfevents.1716898236.JP.3731029.5  events.out.tfevents.1716898255.JP.3731029.6  events.out.tfevents.1716898273.JP.3731029.7  (+92 more)
rlhf/rlhf/: __init__.py  datatypes.py  dynamic_generate_feedback.py  dynamic_rlhf.py  feedback_oracle.py  generate_feedback.py  generate_feedback_2.py  generate_feedback_videos.py  generate_rew_correlation_plot.py  generate_samples.py  networks.py  plot_reward_model_output.py  save_reset_wrapper.py  train_RL_agent.py  train_agent.py  train_agent_2.py  train_agent_with_ensemble.py  train_bc.py  train_reward_model.py  train_reward_model_2.py  train_reward_model_with_noise_2.py  utils.py
rlhf/scripts/: generate_correlation_plots.sh  generate_feedback.sh  generate_rew_correlation_plot.py  train_agents.sh  train_agents_with_noise.sh  train_behavioral_cloning.sh  train_reward_models.sh  train_reward_models_with_noise.sh
(+1102 files in other folders)
