[tool.poetry]
name = "multi-type-feedback"
version = "0.1.0"
description = "Reward Learning from Multiple Feedback Types"
authors = ["András Geiszl <geiszla@gmail.com>"]
license = "UNLICENSED"
readme = "README.md"
repository = "https://github.com/ymetz/multi-type-feedback"
packages = [{ include = "multi-type-feedback" }]

[tool.poetry.scripts]
generate_feedback = "rlhf.generate_feedback:main"
train_reward = "rlhf.train_reward_model:main"
train_agent = "rlhf.train_agent:main"
plot_reward = "rlhf.plot_reward_model_output:main"
export_videos = "rlhf.export_videos:main"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.black]
line-length = 88

[tool.pyright]
pythonVersion = "3.11"
pythonPlatform = "All"

include = ["rlhf"]
exclude = ["**/__pycache__"]

typeCheckingMode = "basic"

useLibraryCodeForTypes = true
stubPath = "python-type-stubs"

[tool.pylint.TYPECHECK]
generated-members = "torch.*"

[tool.pylint.MAIN]
disable = "duplicate-code,too-many-arguments,too-many-locals"
