[tool.poetry]
name = "rlhf"
version = "0.1.0"
description = "Project for the AI Center Projects in Machine Learning Research course"
authors = ["András Geiszl <geiszla@gmail.com>"]
license = "UNLICENSED"
readme = "README.md"
repository = "https://github.com/geiszla/rlhf"
packages = [{ include = "rlhf" }]

[tool.poetry.scripts]
generate_feedback = "rlhf.generate_feedback:main"
train_reward = "rlhf.train_reward_model:main"
train_agent = "rlhf.train_agent:main"
plot_reward = "rlhf.plot_reward_model_output:main"
export_videos = "rlhf.export_videos:main"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.black]
line-length = 88

[tool.pyright]
pythonVersion = "3.11"
pythonPlatform = "All"

include = ["rlhf"]
exclude = ["**/__pycache__"]

typeCheckingMode = "basic"

useLibraryCodeForTypes = true
stubPath = "python-type-stubs"

[tool.pylint.TYPECHECK]
generated-members = "torch.*"

[tool.pylint.MAIN]
disable = "duplicate-code,too-many-arguments,too-many-locals"
